captured value in search bar

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <h1>Weather Dashboard</h1>
   </header>
   <main>
-    <div id="srcBar">
-      <h2>Search for a city:</h2>
-      <input type="search">
-      <button>Search</button>
-    </div>
+    <form id="srcFormEl">
+      <label>Search for a city:</label>
+      <input type="search" id="srcBarEl">
+      <button type="submit">Search</button>
+    </form>
     <div id="srcHistory">
     </div>
     <div id="srcResults">
